crates/rulesteward-fapolicyd/tests/snapshots/fapd-W04__unrelated.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
files=2
diagnostics=0
(no diagnostics)
